<resources>
    <string name="app_name">Jean-Cloud Helper</string>
    <string name="email">email</string>
    <string name="mot_de_passe">mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="creation_d_un_compe">Creation d\'un compte</string>
    <string name="creation">Creation</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="title_activity_espace">EspaceActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="espace_guide">Espace Guide</string>
    <string name="espace_experience">Espace Experience</string>
    <string name="espace_expert">Espace Expert</string>
    <string name="services">Services</string>
    <string name="mon_profile">Mon Profile</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="votre_adresse">votre adresse :</string>
    <string name="pr_nom">prénom</string>
    <string name="tel">tel</string>
    <string name="nom">nom</string>
    <string name="todoo">TODO</string>
    <string name="todo">TODO</string>
    <string name="tod">TODO</string>
    <string name="todooo">TODO</string>
    <string name="todo">TODO</string>
</resources>
