<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/guide"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/espace_guide" />
        <item
            android:id="@+id/experience"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/espace_experience" />
        <item
            android:id="@+id/expert"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/espace_expert" />

    </group>

    <item android:title="@string/services">
        <menu>
            <item
                android:id="@+id/profile"
                android:icon="@android:drawable/ic_menu_myplaces"
                android:title="@string/mon_profile" />
            <item
                android:id="@+id/deconnexion"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/deconnexion" />
        </menu>
    </item>

</menu>
